--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -9,26 +10,28 @@
         <variable
             name="aStudent"
             type="com.example.databiinding.MainActivity.Student" />
-        
-        
-        <variable
-            name="handler"
-            type="com.example.databiinding.MainActivity.EventHandler" />
-
-
 
     </data>
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
         tools:context=".MainActivity">
+
+
+
+        <ImageView
+            android:layout_width="92dp"
+            android:layout_height="92dp"
+            app:imageUrl="@{aStudent.imageUrl}"
+            android:background="#C3C3C3"/>
+
 
 
         <TextView
@@ -46,12 +49,6 @@
             />
 
 
-
-     <Button
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Cick"
-         android:onClick="@{() -> handler.handleClick(aStudent.name)}"/>
 
 
     </LinearLayout>
