--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,12 @@
             />
 
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{aStudent.name}"
+            android:id="@+id/etName"
+            android:hint="@string/hint_name"/>
 
 
     </LinearLayout>
