--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
 
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -25,13 +25,11 @@
         tools:context=".MainActivity">
 
 
-
         <ImageView
             android:layout_width="92dp"
             android:layout_height="92dp"
-            app:imageUrl="@{aStudent.imageUrl}"
-            android:background="#C3C3C3"/>
-
+            android:background="#C3C3C3"
+            app:imageUrl="@{aStudent.imageUrl}" />
 
 
         <TextView
@@ -50,12 +48,18 @@
 
 
         <EditText
+            android:id="@+id/etName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{aStudent.name}"
-            android:id="@+id/etName"
-            android:hint="@string/hint_name"/>
+            android:hint="@string/hint_name"
+            android:enabled="@{enableSwitch.checked}"
+            android:text="@={aStudent.name}" />
 
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/enableSwitch"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     </LinearLayout>
 </layout>
